--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ http://www.tooplate.com/view/2102-constructive
 							<h3 class="tm-font-big font-bold mb-3">Created and led by Omya Tomar</h3>
 							<p class="mb-5 tm-font-big">                            </p>
 							<p class="mb-5 tm-font-big">Cyberbloom is a student-led initiative dedicated to helping senior citizens feel confident in their skills, particularly in navigating through the digital world. Through interactive weekly workshops, seniors learn about online safety, how to use smartphones, email, video apps, and so much more.  </p>
-							<p class="mb-5 tm-font-big">This project is part of my Girl Scout Gold Award, designed to support older adults with digital skills through patience, care, and respect for the generation that shaped our world.</p>
+							<p class="mb-5 tm-font-big">As part of my Girl Scout Gold Award project, I designed Cyberbloom to support older adults in developing digital literacy with patience, care, and respect for the generation that shaped our world.</p>
 							<p class="mb-5 tm-font-big">From developing the website and presentations to coordinating workshop sessions, I've loved building this project from the ground up. I'm also incredibly grateful to my friends who have generously volunteered their time to support the workshops - I truly couldn’t have done it without them! </p>
 							<a href="#" class="btn tm-btn tm-font-big" data-nav-link="#tmNavLink2">Continue...</a> 
 							<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
