--- a/index.html
+++ b/index.html
@@ -316,19 +316,24 @@
 							
 							<!-- Image collage row for Cyberbloom -->
 								<div class="flex flex-wrap justify-center gap-3 mb-6">
-  									<img src="workshop_11.png" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
-  									<img src="workshop_222.jpg" alt="" style="height: 270px; max-width: 510px; object-fit: cover; border-radius: 12px;" />
-  									<img src="workshop_3.jpg" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
+									<!--
 
-									<img src="workshop_4.jpg" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
-									<img src="workshop_5.jpg" alt="" style="height: 270px; max-width: 510px; object-fit: cover; border-radius: 12px;" />
-									<img src="workshop_6.jpg" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
+									PICTURES COMMENTED HERE, ONCE YOU GET FORMS UNCOMMMENT THESE!
 
-									<img src="workshop_7.jpg" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
-									<img src="workshop_8.jpg" alt="" style="height: 270px; max-width: 510px; object-fit: cover; border-radius: 12px;" />
-									<img src="workshop_9.jpg" alt="" style="height: 270px; max-width: 190px; object-fit: cover; border-radius: 12px;" />
+  									<img src="workshop_11.png" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+  									<img src="workshop_222.jpg" alt="" style="height: 230px; max-width: 470px; object-fit: cover; border-radius: 12px;" />
+  									<img src="workshop_3.jpg" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+
+									<img src="workshop_4.jpg" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+									<img src="workshop_5.jpg" alt="" style="height: 230px; max-width: 470px; object-fit: cover; border-radius: 12px;" />
+									<img src="workshop_6.jpg" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+
+									<img src="workshop_7.jpg" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+									<img src="workshop_8.jpg" alt="" style="height: 230px; max-width: 470px; object-fit: cover; border-radius: 12px;" />
+									<img src="workshop_9.jpg" alt="" style="height: 230px; max-width: 150px; object-fit: cover; border-radius: 12px;" />
+									
 								</div>
-
+								-->
 
 							<p class="mb-5 tm-font-big">                           </p>
 							<p class="mb-5 tm-font-big">A Note from the Creator:</p>
