--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 							<header class="mb-4">
 
 							<div style="display: flex; align-items: center; gap: 12px;">
-								<img src="logo.jpg" alt="logo" style="height: 120px; width: 120px; border-radius: 50%;">
+								<img src="logo.jpg" alt="logo" style="height: 55px; width: 55px; border-radius: 50%;">
 								<h1 class="tm-text-shadow" style="margin: 0;">Cyberbloom</h1>
 							</div>
 							</header>
@@ -446,10 +446,10 @@
 							<header class="mb-4"><h1 class="tm-text-shadow">Shape the Future</h1></header>
 							<p class="mb-5 tm-font-big"></p>
 							<p class="mb-5 tm-font-big">Give us suggestions!!</p>
-							<p class="mb-5 tm-font-big">Form for feedback & what we should teach next: </p>
+							<p class="mb-5 tm-font-big">Form for feedback & what we should teach next: https://forms.gle/D2gL2ptr31bbGVz46 </p>
 							<p class="mb-5 tm-font-big" style="margin-bottom: 4rem !important;"><!-- Added extra space here --></p>
 							<p class="mb-5 tm-font-big">Sign up for reminders! </p>	
-							<p class="mb-5 tm-font-big">Form to sign up for weekly reminders for classes & further updates: </p>
+							<p class="mb-5 tm-font-big">Form to sign up for weekly reminders for classes & further updates: https://forms.gle/ATvoTTfpN8vL82HY9 </p>
 							<a href="#" class="btn tm-btn tm-font-big" data-nav-link="#tmNavLink4">Continue...</a>
 						</div>              
 					</section>
@@ -623,5 +623,3 @@
 	</script>
 </body>
 </html>
-
-
