--- a/index.html
+++ b/index.html
@@ -446,11 +446,13 @@
 						<div class="ml-auto">
 							<header class="mb-4"><h1 class="tm-text-shadow">Shape the Future</h1></header>
 							<p class="mb-5 tm-font-big"></p>
-							<p class="mb-5 tm-font-big">Give us suggestions!!</p>
-							<p class="mb-5 tm-font-big">Form for feedback & what we should teach next: https://forms.gle/D2gL2ptr31bbGVz46 </p>
+							<p class="mb-5 tm-font-big">We’d love to hear from you! </p>
+							<p class="mb-5 tm-font-big">Share your feedback and let us know what topics you’d like us to teach next by filling out this form: <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehWyibcRVYnh1FWlOBsR7dDSZ5cb_TIyahb10wkmKbIXByJA/viewform?embedded=true" width="640" height="1272" frameborder="0" marginheight="0" marginwidth="0"></iframe></p>
+
 							<p class="mb-5 tm-font-big" style="margin-bottom: 4rem !important;"><!-- Added extra space here --></p>
-							<p class="mb-5 tm-font-big">Sign up for reminders! </p>	
-							<p class="mb-5 tm-font-big">Form to sign up for weekly reminders for classes & further updates: https://forms.gle/ATvoTTfpN8vL82HY9 </p>
+
+							<p class="mb-5 tm-font-big">Don’t miss a class! </p>	
+							<p class="mb-5 tm-font-big">Sign up for weekly class reminders and program updates by completing this form: <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd0X1CdtYND9OT1Yqux0fP2gu8AOeSU0NOgD5cZXxSgLXAjkA/viewform?embedded=true" width="640" height="1272" frameborder="0" marginheight="0" marginwidth="0"></iframe></p>
 							<a href="#" class="btn tm-btn tm-font-big" data-nav-link="#tmNavLink4">Continue...</a>
 						</div>              
 					</section>
@@ -624,5 +626,3 @@
 	</script>
 </body>
 </html>
-
-
